--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tic-tac-toe-telegram",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "author": "termitkin",
   "license": "MIT",
   "description": "Tic Tac Toe bot for Telegram",
@@ -16,7 +16,8 @@
   ],
   "dependencies": {
     "express": "4.18.1",
-    "mongoose": "6.3.1"
+    "mongoose": "6.3.1",
+    "typescript": "4.6.4"
   },
   "devDependencies": {
     "@types/express": "4.17.13",
@@ -32,7 +33,6 @@
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "7.29.4",
     "eslint-plugin-react-hooks": "4.5.0",
-    "prettier": "2.6.2",
-    "typescript": "4.6.4"
+    "prettier": "2.6.2"
   }
 }
