--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "description": "Tic Tac Toe bot for Telegram",
   "main": "app/index.ts",
   "scripts": {
-    "start": "tsc && node dist/index.js"
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "tsc && node dist/index.js"
   },
   "type": "module",
   "keywords": [
@@ -17,11 +19,11 @@
   "dependencies": {
     "express": "5.1.0",
     "mongoose": "8.16.4",
-    "typescript": "5.8.3"
+    "typescript": "5.8.3",
+    "@types/express": "5.0.3",
+    "@types/node": "^22.12.0"
   },
   "devDependencies": {
-    "@types/express": "5.0.3",
-    "@types/node": "^24.0.14",
     "@typescript-eslint/eslint-plugin": "8.37.0",
     "@typescript-eslint/parser": "8.37.0",
     "eslint": "9.31.0",
